# backend_estoque

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py  models.py  schemas.py  security.py
app/models/: user.py
app/routers/: auth.py  user.py
app/schemas/: user.py
app/services/: auth.py  user.py
migrations/: env.py
migrations/versions/: 017b78f444bd_create_users_table.py  125010101ea1_create_users_table.py  3ac1ef26600b_create_users_table.py  64af8637d068_create_table_user.py  acf408990eff_create_table_user.py  ca75c3deb87c_create_users_table.py  cf6bc37f7b67_update_lenght_row_password.py
postgres/: Dockerfile
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_main.py  test_security.py
tests/services/: test_user.py
