[tool.poetry]
name = "app"
version = "0.0.1"
description = "Api de estoque e clients"
authors = ["Walber Vaz <wvs.walber@gmail.com>"]
readme = "README.md"
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
